# MyBuddy

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.ini.example
.github/workflows/: build.yml
docs/: notes-config.md
src/: MyBuddy.manifest  MyBuddy.rc  app.cpp  app.h  config.cpp  config.h  ini.cpp  ini.h  main.cpp  notes.cpp  notes.h  resource.h  state.cpp  state.h  version.h  window.cpp  window.h
